2011-07.12	Juergen Beisert <jbe@pengutronix.de>

	* Platform: Freeze to PTXdist-2011.07.0

2011-07-09	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 2.6.39: Keep in sync with stable release 2.6.39.3

2011-07-08	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 2.6.39: Add some patches to remove build warnings

2011-07-05	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 2.6.39: Add a patch to uncover hidden bugs

2011-07-04	Juergen Beisert <jbe@pengutronix.de>

	* Platform: Add a template to describe the attached LCD for graphical
	            use

2011-06-30	Juergen Beisert <jbe@pengutronix.de>

	* Platform: Keep the host libusb rule files working with next ptxdist
		    release
	* Kernel 2.6.39:
		- Add some smaller fixes for the RTC driver

2011-06-24	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 2.6.39: Keep in sync with stable release 2.6.39.2

2011-06-19	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 2.6.39:
		- Back to master
		- Add support for a new W35i display
		- Fix backlight GPIO handling to make it work as expected

	* Kernel 2.6.38:
		- Back to master
		- Fix backlight GPIO handling to make it work as expected

2011-06-04	Juergen Beisert <jbe@pengutronix.de>

	* various MD5 sums added to be compliant with the new PTXdist
	* Kernel 2.6.39:
		- Enable static USB mass storage and SCSI support
		- Enable VFAT support
	* Kernel 2.6.38:
		- Enable static USB mass storage and SCSI support
		- Enable VFAT support
	* Kernel 2.6.38: Release ptx-2011.06.0
	* Kernel 2.6.39: Release ptx-2011.06.0
	* Barebox 2011.05.0: Release ptx-2011.06.0
	* Platform: Release June 2011 (2011.06.0)

2011-06-03	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 2.6.39: Keep in sync with stable release 2.6.39.1
	* Kernel 2.6.38: Keep in sync with stable release 2.6.38.8

2011-05-26	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 2.6.38: Fix a race in the touch driver
	* Kernel 2.6.39: Fix a race in the touch driver
	* Barebox: Add a fix for wrong NAND OOB handling