@@ -11,7 +11,7 @@ Index: linux-2.6.39/Makefile
  PATCHLEVEL = 6
  SUBLEVEL = 39
 -EXTRAVERSION = .3
-+EXTRAVERSION = .3-ptx-master
++EXTRAVERSION = .3-ptx-2011.07.0
  NAME = Flesh-Eating Bats with Fangs
  
  # *DOCUMENTATION*
